--- a/Form.html
+++ b/Form.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div>
+	<div class="container">
 		<h1 class="Signup-text">Sign Up</h1>
 		<label class="Email-text" for="Email">
 			Email
@@ -31,14 +31,18 @@
 		<div class="checkbox-container">
 			<label class="checkbox" for="Terms">
 
-				<input class="checkbox-button" type="checkbox" name="Terms">
+				<input type="checkbox" name="Terms">
 				I accept the Terms of <a href="#">Use &#38; Privacy Policy.
 				</a>
 			</label>
 		</div>
 		<div>
-			<button class="Signup-button">Sign Up</button>
-			<button class="Login-button">Login</button>
+			<button class="Signup-button">
+				Sign Up
+			</button>
+			<button class="Login-button">
+				Login
+			</button>
 		</div>
 	</div>
 </body>
